# project-euler

./: .travis.yml  README.md  problem1.py  problem10.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem2.py  problem20.py  problem21.py  problem22.py  problem23.py  problem24.py  problem25.py  problem26.py  problem27.py  problem28.py  problem29.py  problem3.py  problem30.py  problem31.py  problem32.py  problem33.py  problem34.py  problem35.py  problem36.py  problem37.py  problem38.py  problem39.py  problem4.py  problem40.py  problem41.py  problem42.py  problem43.py  (+13 more)
.circleci/: config.yml
haskell/: Dockerfile  LICENSE  Makefile  Problem1.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem6.hs  README.md  project-euler.cabal  stack.yaml
haskell/Helpers/: Numbers.hs  Strings.hs
haskell/src/: Config.hs  Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem2.hs  Problem20.hs  Problem21.hs  Problem22.hs  Problem23.hs  Problem24.hs  Problem25.hs  Problem26.hs  Problem27.hs  Problem28.hs  Problem29.hs  Problem3.hs  Problem30.hs  Problem31.hs  Problem32.hs  Problem33.hs  Problem34.hs  Problem35.hs  Problem36.hs  Problem37.hs  Problem38.hs  Problem39.hs  Problem4.hs  Problem40.hs  Problem41.hs  Problem42.hs  Problem43.hs  Problem44.hs  (+18 more)
haskell/src/Helpers/: Lists.hs  Numbers.hs  Runtime.hs
haskell/test/: Spec.hs
helpers/: math.py  numbers.py  runtime.py  string.py  strings.py
(+205 files in other folders)
