name:                project-euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jawang35/project-euler/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Wang
maintainer:          jawang35
copyright:           2017 Jason Wang
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Helpers.Numbers
                     , Helpers.Runtime
                     , Helpers.Strings
                     , Problem1
                     , Problem2
                     , Problem3
                     , Problem4
                     , Problem6
                     , Problem7
                     , Problem8
  build-depends:       base >= 4.7 && < 5

test-suite project-euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-euler
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jawang35/project-euler/haskell
